add selection buttons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
+    <ul>
+      <li><button>Rock</button></li>
+      <li><button>Paper</button></li>
+      <li><button>Scissor</button></li>
+    </ul>
     <script src="./game.js"></script>
   </body>
 </html>
