add player scores and result divs to display the results

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       <li><button>Paper</button></li>
       <li><button>Scissor</button></li>
     </ul>
+    <div class="scores">
+      <div class="human-score">0</div>
+      <div class="computer-score">0</div>
+    </div>
+    <div class="result"></div>
     <script src="./game.js"></script>
   </body>
 </html>
